--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,3 +1,131 @@
-ul.convo-list {
-  background: blue;
+$black: #000000;
+$blue: #2196F3;
+$dingy: #495B6A;
+$white: #ffffff;
+$purple: #673AB7;
+$yellow: #FFEB3B;
+$green: #39afff;
+$red: #F44336;
+$orange: #FF5722;
+$black: #333333;
+
+$navHeight: 64px;
+
+$trans: 0.3s ease;
+
+.wrapper {
+
+  width: 100%;
+  overflow: auto;
+  background: darken($white, 5%);
+  position: fixed;
+  top: $navHeight;
+
+  box-shadow: 0px 3px 3px 0px rgba(50, 50, 50, 0.5);
+
+  .inner {
+
+    margin-bottom: $navHeight;
+    margin-top: $navHeight;
+
+    -ms-overflow-style: none;
+    overflow: -moz-scrollbars-none;
+    //gotta hide windows scrollbars
+
+    .content {
+      padding: ($navHeight - ($navHeight/1.5)) / 2;
+      position: relative;
+      margin-bottom: $navHeight/2;
+    }
+  }
+  //transition: $trans;
+}
+
+.message-wrapper {
+  position: relative;
+  overflow: hidden;
+
+  width: 100%;
+
+  .circle-wrapper {
+    height: $navHeight/1.5;
+    width: $navHeight/1.5;
+    border-radius: 50%;
+  }
+
+  .text-wrapper {
+    padding: ($navHeight - ($navHeight/1.6)) / 2;
+    min-height: $navHeight/2.2;
+    width: 60%;
+    max-width: 90%;
+    word-wrap: break-word;
+    margin: 0 ($navHeight - ($navHeight/1.5)) / 2;
+    box-shadow: 0px 1px 0px 0px rgba(50, 50, 50, 0.3);
+    border-radius: 2px;
+    font-weight: 300;
+    position: relative;
+    /* word-break: break-all; */
+    //opacity: 0;
+
+    &:before {
+      content: '';
+      width: 0;
+      height: 0;
+      border-style: solid;
+    }
+
+    .time {
+      color: $dingy;
+      margin-top: 4px;
+      font-size: 11px;
+      float: right;
+    }
+
+  }
+
+  &.them {
+
+    margin: (($navHeight - ($navHeight/1.5)) / 2) 8px;
+    padding: (($navHeight - ($navHeight/1.5)) / 2) 0;
+
+    .circle-wrapper, .text-wrapper {
+      background: $green;
+      float: left;
+      color: $black;
+    }
+
+    .text-wrapper {
+      &:before {
+        border-width: 0 10px 10px 0;
+        border-color: transparent $green transparent transparent;
+        position: absolute;
+        top: 0;
+        left: -9px;
+      }
+    }
+  }
+
+  &.me {
+
+    margin: (($navHeight - ($navHeight/1.5)) / 2) -8px;
+    padding: (($navHeight - ($navHeight/1.5)) / 2) 0;
+
+    .circle-wrapper, .text-wrapper {
+      background: $orange;
+      float: right;
+      color: $black;
+    }
+
+    .text-wrapper {
+      background: $white;
+
+      &:before {
+        border-width: 10px 10px 0 0;
+        border-color: $white transparent transparent transparent;
+        position: absolute;
+        top: 0;
+        right: -9px;
+      }
+    }
+  }
 }
