--- a/src/components/PanelWrapper/PanelWrapper.scss
+++ b/src/components/PanelWrapper/PanelWrapper.scss
@@ -4,12 +4,13 @@ $navHeight: 64px;
 .wrapper {
 
   width: 100%;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   background: darken($white, 5%);
   position: fixed;
   top: $navHeight;
 
-  box-shadow: 0px 3px 3px 0px rgba(50, 50, 50, 0.5);
+  box-shadow: 0 3px 3px 0 rgba(50, 50, 50, 0.5);
 
   .inner {
 
