--- a/src/components/ConfigPanel/ConfigPanel.scss
+++ b/src/components/ConfigPanel/ConfigPanel.scss
@@ -2,3 +2,8 @@
   width: calc(100% - 20px) !important;
   margin-left: 10px;
 }
+
+.reset-defaults-button {
+  width: calc(100% - 20px) !important;
+  margin: 10px 0 0 10px;
+}
