Adding more details in the readme file, and links to the repo in the project header

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,3 +2,18 @@
   position: fixed;
   top: 0;
 }
+
+.menu-icon {
+  margin-top: 7px;
+}
+
+.github-link {
+
+  margin: 19px 15px 0 0;
+  a {
+    text-decoration: none;
+    color: white;
+    font-size: 21px;
+  }
+
+}
